--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,7 +28,7 @@ jobs:
       run: |
         source venv/bin/activate
         cd workspace/tests
-        PYTHONPATH=../../.. pytest -v --tb=short --cov=sci_fi_dashboard --cov-report=xml
+        PYTHONPATH=../../.. pytest -v --tb=short --timeout=120
     
     - name: Upload coverage
       if: always()
@@ -49,8 +49,7 @@ jobs:
     
     - name: Run smoke tests
       run: |
-        python -m venv venv
         source venv/bin/activate
-        pip install pytest pytest-asyncio
+        pip install pytest pytest-asyncio pytest-timeout
         cd workspace/tests
-        PYTHONPATH=../../.. pytest -v -m smoke --tb=short
+        PYTHONPATH=../../.. pytest -v -m smoke --timeout=60 --tb=short
