--- a/.env.example
+++ b/.env.example
@@ -19,8 +19,8 @@ GROQ_API_KEY="your_groq_api_key_here"
 # If you leave this blank, the system will seamlessly run entirely on your Cloud API keys.
 WINDOWS_PC_IP="192.168.1.xxx"
 # --- Security & Webhooks ---
-# Gateway internal token (Ensure this matches your Node/CLI configs)
-OPENCLAW_GATEWAY_TOKEN="your_secure_gateway_token"
+# Optional: Only needed if exposing gateway to external clients
+# OPENCLAW_GATEWAY_TOKEN="your_secure_gateway_token"
 
 # WhatsApp Bridge authorization secret
 WHATSAPP_BRIDGE_TOKEN="your_whatsapp_bridge_secret"
