Refactor workspace paths to use user home directory and improve feedback detection
- Updated various scripts and configuration files to replace hardcoded paths with user home directory expansion (e.g., `~/.openclaw`).
- Enhanced the `ImplicitFeedbackDetector` class to analyze user feedback more effectively with regex patterns for corrections and praises.
- Added new batch files for Windows onboarding and service startup.
- Improved database initialization and schema management in `DatabaseManager`.
- Adjusted monitoring and session management scripts for better path handling.
- Cleaned up code and comments for clarity and maintainability.

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
 # .env.example
-# OpenClaw Environment Configuration Template
+# Jarvis-OSS Environment Configuration Template
+# Copy this file to .env and fill in your values:
+#   Mac/Linux: cp .env.example .env
+#   Windows:   copy .env.example .env
 
 # --- LLM Provider API Keys ---
-# Google Gemini (Primary brain)
+# Google Gemini (Primary brain — REQUIRED)
 GEMINI_API_KEY="your_gemini_api_key_here"
 
 # OpenRouter (Fallback / Backup Models)
@@ -11,23 +14,40 @@ OPENROUTER_API_KEY="your_openrouter_api_key_here"
 # OpenAI / Custom (For specific tools or overrides)
 OPENAI_API_KEY="your_openai_api_key_here"
 
-# Groq (Optional, used for specific high-speed transcriptions/tools)
+# Groq (Required for voice message transcription via Groq Whisper)
+# Get your key at: https://console.groq.com/keys
 GROQ_API_KEY="your_groq_api_key_here"
 
-# --- Infrastructure Config ---
-# (HIGHLY OPTIONAL) IP address of the local PC running Ollama inference (The Vault)
-# If you leave this blank, the system will seamlessly run entirely on your Cloud API keys.
-WINDOWS_PC_IP="192.168.1.xxx"
-# --- Security & Webhooks ---
-# Optional: Only needed if exposing gateway to external clients
-# OPENCLAW_GATEWAY_TOKEN="your_secure_gateway_token"
+# --- OpenClaw Gateway ---
+# Auth token for the OpenClaw Antigravity Proxy (used for all LLM calls)
+# Found in your OpenClaw config (openclaw.json) after running `openclaw auth login`
+OPENCLAW_GATEWAY_TOKEN=""
 
+# Gateway URL (default: http://localhost:8080/v1/messages)
+# Only change this if your OpenClaw proxy runs on a different host/port
+# OPENCLAW_GATEWAY_URL="http://localhost:8080/v1/messages"
+
+# Note: Claude and Gemini Pro are accessed through the OpenClaw proxy —
+# no separate ANTHROPIC_API_KEY is needed.
+
+# --- Infrastructure Config ---
+# (OPTIONAL) IP address of the local PC running Ollama inference (The Vault)
+# If you leave this blank, the system runs entirely on Cloud API keys.
+WINDOWS_PC_IP=""
+
+# --- Security & Webhooks ---
 # WhatsApp Bridge authorization secret
 WHATSAPP_BRIDGE_TOKEN="your_whatsapp_bridge_secret"
 
 # WhatsApp Fastapi Relay Target
 WHATSAPP_CHAT_URL="http://127.0.0.1:8000/chat"
 
+# --- User Identity ---
+# Your phone number (E.164 format, e.g. +15551234567) — used for admin-level access
+ADMIN_PHONE=""
+# Optional: VIP user phone number (gets elevated access to tools like Gmail/Calendar)
+VIP_PHONE=""
+
 # --- Operational Settings ---
-# Default session type for memory (safe or spicy)
-MAC_APP_SESSION_TYPE="safe"
+# Default session type for memory routing ("safe" or "spicy")
+SESSION_TYPE="safe"
